--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,40 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
-orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
-# Orchestrate or schedule a set of jobs
+defaults: &defaults
+  docker:
+    - image: alpine:latest
+  working_directory: ~/
+print_pipeline_id: &print_pipeline_id
+  steps:
+    - run:
+        name: Reusable Command to print workflowid
+        command: echo $CIRCLE_WORKFLOW_ID
+
+jobs:
+  build:
+    <<: *defaults
+    steps:
+      - run: npm run setup && npm run lint
+      - save_cache:
+          key: packages_cache
+          paths: /src/node_modules
+  test:
+    <<: *defaults
+    steps:
+      - restore_cache:
+          key: packages_cache
+  analyse:
+    <<: *defaults
+    steps:
+      - run: npm audit
 workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
+  workflow:
     jobs:
-      - welcome/run
+      - build
+      - test:
+          requires:
+            - build
+      - analyse:
+          requires:
+            - test
+          
