--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
   build:
     <<: *defaults
     steps:
+      - checkout
       - run: npm run setup && npm run lint
       - save_cache:
           key: packages_cache
@@ -21,11 +22,13 @@ jobs:
   test:
     <<: *defaults
     steps:
+      - checkout
       - restore_cache:
           key: packages_cache
   analyse:
     <<: *defaults
     steps:
+      - checkout
       - run: npm audit
 workflows:
   workflow:
