--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
     <<: *defaults
     steps:
       - checkout
-      - run: npm run setup && npm run lint
+      - run: npm install && npm run lint
       - save_cache:
           key: packages_cache
           paths: /src/node_modules
